--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,17 @@ tr:hover {
 	background-color: #f5f5f5
 }
 
+footer {
+	text-align: center;
+	margin-bottom: 30px;
+	margin-top: 30px;
+
+}
+
+footer:hover {
+	text-decoration: underline;
+}
+
 
 .container {
 	width: 600px;
